tests/ui/parser/issues/issue-63135.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-63135.rs:3:16
   |
LL | fn i(n{...,f #
   |     - -        ^
   |     | |
   |     | unclosed delimiter
   |     unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-63135.rs:3:16
   |
LL | fn i(n{...,f #
   |     - -        ^
   |     | |
   |     | unclosed delimiter
   |     unclosed delimiter

error: aborting due to 2 previous errors

