tests/ui/parser/issues/issue-63135.rs
// error-pattern: this file contains an unclosed delimiter
// error-pattern: aborting due to 2 previous errors
fn i(n{...,f #
